<resources>
    <string name="app_name">sample-rxkotlin</string>
    <string name="fragment_home_btn_creating">Creating Observables</string>
    <string name="fragment_home_btn_transforming">Transforming Observables</string>
    <string name="fragment_home_btn_filtering">Filtering Observables</string>
    <string name="fragment_home_btn_combining">Combining Observables</string>
    <string name="fragment_home_btn_error_handling">Error Handling Operators</string>
    <string name="fragment_home_btn_utility">Observable Utility Operators</string>
    <string name="fragment_home_btn_conditional_and_boolean">Conditional And Boolean Operators</string>
    <string name="fragment_home_btn_connectable">Connectable Observable Operators</string>
    <string name="fragment_home_btn_debounce">Debounce</string>
    <string name="fragment_creating_btn_create">Create</string>
    <string name="fragment_creating_btn_defer">Defer</string>
    <string name="fragment_creating_btn_empty">Empty</string>
    <string name="fragment_creating_btn_never">Never</string>
    <string name="fragment_creating_btn_error">Error</string>
    <string name="fragment_creating_btn_from">From</string>
    <string name="fragment_creating_btn_interval">Interval</string>
    <string name="fragment_creating_btn_just">Just</string>
    <string name="fragment_creating_btn_range">Range</string>
    <string name="fragment_creating_btn_repeat">Repeat</string>
    <string name="fragment_creating_btn_timer">Timer</string>
    <string name="fragment_transforming_btn_buffer">Buffer</string>
    <string name="fragment_transforming_btn_flat_map">Flat Map</string>
    <string name="fragment_transforming_btn_group_by">Group By</string>
    <string name="fragment_transforming_btn_map">Map</string>
    <string name="fragment_transforming_btn_scan">Scan</string>
    <string name="fragment_transforming_btn_window">Window</string>
    <string name="fragment_filtering_btn_debounce">Debounce</string>
    <string name="fragment_filtering_btn_distinct">Distinct</string>
    <string name="fragment_filtering_btn_element_at">ElementAt</string>
    <string name="fragment_filtering_btn_filter">Filter</string>
    <string name="fragment_filtering_btn_first">First</string>
    <string name="fragment_filtering_btn_ignore_elements">Ignore Elements</string>
    <string name="fragment_filtering_btn_last">Last</string>
    <string name="fragment_filtering_btn_sample">Sample</string>
    <string name="fragment_filtering_btn_skip">Skip</string>
    <string name="fragment_filtering_btn_skip_last">Skip Last</string>
    <string name="fragment_filtering_btn_take">Take</string>
    <string name="fragment_filtering_btn_take_last">Take Last</string>
    <string name="fragment_filtering_btn_combine_latest">Combine Latest</string>
    <string name="fragment_filtering_btn_join">Join</string>
    <string name="fragment_filtering_btn_merge">Merge</string>
    <string name="fragment_filtering_btn_start_with">Start With</string>
    <string name="fragment_filtering_btn_zip">Zip</string>
    <string name="fragment_error_handling_btn_catch">Catch</string>
    <string name="fragment_error_handling_btn_retry">Retry</string>
    <string name="fragment_utility_btn_delay">Delay</string>
    <string name="fragment_utility_btn_do">Do</string>
    <string name="fragment_utility_btn_materialize">Materialize/Dematerialize</string>
    <string name="fragment_utility_btn_observe_on">ObserveOn</string>
    <string name="fragment_utility_btn_subscribe_on">SubscribeOn</string>
    <string name="fragment_utility_btn_time_interval">TimeInterval</string>
    <string name="fragment_utility_btn_time_out">TimeOut</string>
    <string name="fragment_utility_btn_timestamp">Timestamp</string>
    <string name="fragment_conditional_and_boolean_btn_all">All</string>
    <string name="fragment_conditional_and_boolean_btn_amb">Amb</string>
    <string name="fragment_conditional_and_boolean_btn_contains">Contains</string>
    <string name="fragment_conditional_and_boolean_btn_default_if_empty">DefaultIfEmpty</string>
    <string name="fragment_conditional_and_boolean_btn_sequence_equal">SequenceEqual</string>
    <string name="fragment_conditional_and_boolean_btn_skip_until">SkipUtil</string>
    <string name="fragment_conditional_and_boolean_btn_skip_while">SkipWhile</string>
    <string name="fragment_conditional_and_boolean_btn_take_until">TakeUntil</string>
    <string name="fragment_conditional_and_boolean_btn_take_while">TakeWhile</string>
    <string name="fragment_connectable_btn_connect">Connect</string>
    <string name="fragment_connectable_btn_publish">Publish</string>
    <string name="fragment_connectable_btn_ref_count">RefCount</string>
    <string name="fragment_connectable_btn_replay">Replay</string>

</resources>