<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/button_debounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_debounce"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_distinct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_distinct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_debounce" />

        <Button
            android:id="@+id/button_element_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_element_at"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_distinct" />

        <Button
            android:id="@+id/button_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_element_at" />

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_filter" />

        <Button
            android:id="@+id/button_ignore_elements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_ignore_elements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_first" />

        <Button
            android:id="@+id/button_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_last"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_ignore_elements" />

        <Button
            android:id="@+id/button_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_last" />

        <Button
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sample" />

        <Button
            android:id="@+id/button_skip_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_skip_last"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_skip" />

        <Button
            android:id="@+id/button_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_take"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_skip_last" />

        <Button
            android:id="@+id/button_take_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_take_last"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_take" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>