<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_defer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_defer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_create" />

        <Button
            android:id="@+id/button_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_defer" />

        <Button
            android:id="@+id/button_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_empty" />

        <Button
            android:id="@+id/button_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_never" />

        <Button
            android:id="@+id/button_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_error" />

        <Button
            android:id="@+id/button_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_interval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_from" />

        <Button
            android:id="@+id/button_just"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_just"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_interval" />

        <Button
            android:id="@+id/button_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_range"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_just" />

        <Button
            android:id="@+id/button_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_repeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_range" />

        <Button
            android:id="@+id/button_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_creating_btn_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_repeat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>