<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_amb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_amb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_all" />

        <Button
            android:id="@+id/button_contains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_contains"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_amb" />

        <Button
            android:id="@+id/button_default_if_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_default_if_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_contains" />

        <Button
            android:id="@+id/button_sequence_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_sequence_equal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_default_if_empty" />

        <Button
            android:id="@+id/button_skip_until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_skip_until"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sequence_equal" />

        <Button
            android:id="@+id/button_skip_while"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_skip_while"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_skip_until" />

        <Button
            android:id="@+id/button_take_until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_take_until"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_skip_while" />

        <Button
            android:id="@+id/button_take_while"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_conditional_and_boolean_btn_take_while"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_take_until" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>