<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/button_buffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_transforming_btn_buffer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_flat_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_transforming_btn_flat_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_buffer" />

        <Button
            android:id="@+id/button_group_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_transforming_btn_group_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_flat_map" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_transforming_btn_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_group_by" />

        <Button
            android:id="@+id/button_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_transforming_btn_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_map" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>