<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/button_combine_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_combine_latest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_combine_latest" />

        <Button
            android:id="@+id/button_merge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_merge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_join" />

        <Button
            android:id="@+id/button_start_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_filtering_btn_start_with"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_merge" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>