<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_connectable_btn_connect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_connectable_btn_publish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_connect" />

        <Button
            android:id="@+id/button_ref_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_connectable_btn_ref_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_publish" />

        <Button
            android:id="@+id/button_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_connectable_btn_replay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_ref_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>